--- a/CineMais/CineMais/src/compraRealizada.fxml
+++ b/CineMais/CineMais/src/compraRealizada.fxml
@@ -38,23 +38,28 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CompraRealizadaController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #181818;" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="240.0" layoutY="92.0" opacity="0.9" text="CineMais" textFill="#da0000">
+            <Label layoutX="135.0" layoutY="41.0" text="Compra realizada com sucesso!" textFill="RED">
                <font>
-                  <Font name="Comic Sans MS Bold" size="38.0" />
+                  <Font name="Comic Sans MS Bold" size="25.0" />
                </font>
             </Label>
-            <Button fx:id="btnFilmesCartaz" layoutX="105.0" layoutY="245.0" mnemonicParsing="false" onAction="#ViewFilmesEmCartaz" prefHeight="46.0" prefWidth="177.0" style="-fx-background-color: #202020; -fx-background-radius: 10px; -fx-border-color: #ffffff; -fx-border-width: 0.05px; -fx-border-radius: 10px;" text="Filmes em cartaz" textFill="WHITE">
+            <Label layoutX="142.0" layoutY="154.0" text="Obrigada por comprar com o CineMais!" textFill="WHITE">
                <font>
-                  <Font name="Comic Sans MS Bold Italic" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="19.0" />
                </font>
-            </Button>
-            <Button fx:id="btnComprarIngresso" layoutX="353.0" layoutY="245.0" mnemonicParsing="false" onAction="#GoToLogin" prefHeight="46.0" prefWidth="177.0" style="-fx-background-color: #202020; -fx-background-radius: 10px; -fx-border-color: #ffffff; -fx-border-width: 0.05px; -fx-border-radius: 10px;" text="Comprar ingresso" textFill="WHITE">
+            </Label>
+            <Label layoutX="142.0" layoutY="200.0" text="Tenha um ótimo filme… " textFill="WHITE">
                <font>
-                  <Font name="Comic Sans MS Bold Italic" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="19.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnIrParaHome" layoutX="243.0" layoutY="307.0" mnemonicParsing="false" onAction="#irParaHome" prefHeight="42.0" prefWidth="156.0" style="-fx-background-color: #202020; -fx-border-color: #cc0000; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Ir para home" textFill="WHITE">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
             </Button>
          </children>
