--- a/CineMais/CineMais/src/login.fxml
+++ b/CineMais/CineMais/src/login.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -53,7 +54,7 @@
                   <Font name="Consolas Bold" size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="inputEmail" accessibleRole="PASSWORD_FIELD" cache="true" layoutX="163.0" layoutY="226.0" prefHeight="34.0" prefWidth="314.0" style="-fx-background-color: #252525;" text="Senha">
+            <TextField fx:id="inputSenha" accessibleRole="PASSWORD_FIELD" cache="true" layoutX="163.0" layoutY="226.0" prefHeight="34.0" prefWidth="314.0" style="-fx-background-color: #252525;" text="Senha">
                <font>
                   <Font name="Consolas Bold" size="18.0" />
                </font>
@@ -62,8 +63,11 @@
                <font>
                   <Font name="Comic Sans MS Bold Italic" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="btnBackLogin" layoutX="25.0" layoutY="25.0" mnemonicParsing="false" onAction="#voltarHome" style="-fx-background-radius: 100%; -fx-scale-y: 1.25px; -fx-scale-x: 1.2px; -fx-background-color: #202020;" text="&lt;&lt;" textFill="RED">
+            <Button fx:id="btnBackLogin" layoutX="25.0" layoutY="25.0" mnemonicParsing="false" onAction="#voltarHome" style="-fx-background-radius: 100%; -fx-scale-y: 1.25px; -fx-scale-x: 1.2px; -fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
                <font>
                   <Font name="Consolas Bold Italic" size="12.0" />
                </font>
@@ -72,6 +76,9 @@
                <font>
                   <Font name="Comic Sans MS Bold" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
     </AnchorPane>
