--- a/CineMais/src/cadastro.fxml
+++ b/CineMais/src/cadastro.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -80,6 +81,9 @@
                <font>
                   <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Button fx:id="btnBack" layoutX="21.0" layoutY="22.0" mnemonicParsing="false" onAction="#backToLogin" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
                <font>
