--- a/CineMais/src/compraRealizada.fxml
+++ b/CineMais/src/compraRealizada.fxml
@@ -34,43 +34,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CompraRealizadaController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #181818;" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="274.0" layoutY="57.0" opacity="0.8" text="Login" textFill="RED">
+            <Label layoutX="135.0" layoutY="41.0" text="Compra realizada com sucesso!" textFill="RED">
                <font>
-                  <Font name="Comic Sans MS Bold" size="38.0" />
+                  <Font name="Comic Sans MS Bold" size="25.0" />
                </font>
             </Label>
-            <TextField fx:id="inputEmail" cache="true" layoutX="164.0" layoutY="166.0" prefHeight="32.0" prefWidth="314.0" style="-fx-background-color: #252525;" text="Email">
+            <Label layoutX="142.0" layoutY="154.0" text="Obrigada por comprar com o CineMais!" textFill="WHITE">
                <font>
-                  <Font name="Consolas Bold" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="19.0" />
                </font>
-            </TextField>
-            <TextField fx:id="inputEmail" accessibleRole="PASSWORD_FIELD" cache="true" layoutX="163.0" layoutY="226.0" prefHeight="34.0" prefWidth="314.0" style="-fx-background-color: #252525;" text="Senha">
+            </Label>
+            <Label layoutX="142.0" layoutY="200.0" text="Tenha um ótimo filme… " textFill="WHITE">
                <font>
-                  <Font name="Consolas Bold" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="19.0" />
                </font>
-            </TextField>
-            <Button fx:id="btnLogar" layoutX="169.0" layoutY="311.0" mnemonicParsing="false" onAction="#fazerLogin" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #202020; -fx-text-fill: WHITE; -fx-background-radius: 10px; -fx-border-color: #511717; -fx-border-radius: 10px; -fx-border-width: 2px;" text="Logar">
+            </Label>
+            <Button fx:id="btnIrParaHome" layoutX="243.0" layoutY="307.0" mnemonicParsing="false" onAction="#irParaHome" prefHeight="42.0" prefWidth="156.0" style="-fx-background-color: #202020; -fx-border-color: #cc0000; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Ir para home" textFill="WHITE">
                <font>
-                  <Font name="Comic Sans MS Bold Italic" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnBackLogin" layoutX="25.0" layoutY="25.0" mnemonicParsing="false" onAction="#voltarHome" style="-fx-background-radius: 100%; -fx-scale-y: 1.25px; -fx-scale-x: 1.2px; -fx-background-color: #202020;" text="&lt;&lt;" textFill="RED">
-               <font>
-                  <Font name="Consolas Bold Italic" size="12.0" />
-               </font>
-            </Button>
-            <Button fx:id="criarCadastrar" layoutX="358.0" layoutY="318.0" mnemonicParsing="false" onAction="#irParaCadastro" prefHeight="28.0" prefWidth="119.0" style="-fx-background-color: #202020; -fx-border-color: #ffffff; -fx-border-width: 0.2px; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Criar Cadastro" textFill="WHITE">
-               <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
             </Button>
          </children>
