--- a/CineMais/src/filmesEmCartaz.fxml
+++ b/CineMais/src/filmesEmCartaz.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -39,11 +40,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="filmesEmCartazController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FilmesEmCartazController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="649.0" style="-fx-background-color: #181818;" VBox.vgrow="ALWAYS">
          <children>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
+            <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#voltarListaShoppings" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
                <font>
                   <Font size="14.0" />
                </font>
@@ -79,31 +80,49 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button fx:id="btn03" layoutX="232.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso03" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="14:00" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button fx:id="btn05" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso05" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="16:00" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button fx:id="btn06" layoutX="367.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso06" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="20:40" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button fx:id="btn04" layoutX="367.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso04" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="19:50" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button fx:id="btn02" layoutX="367.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso02" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="17:30" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Label layoutX="233.0" layoutY="69.0" text="Sala 02  3D 08/07" textFill="WHITE" />
                   <Label layoutX="368.0" layoutY="69.0" text="Sala 05  4D 09/07" textFill="WHITE" />
