--- a/CineMais/src/home.fxml
+++ b/CineMais/src/home.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -51,11 +52,17 @@
                <font>
                   <Font name="Comic Sans MS Bold Italic" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Button fx:id="btnComprarIngresso" layoutX="353.0" layoutY="245.0" mnemonicParsing="false" onAction="#GoToLogin" prefHeight="46.0" prefWidth="177.0" style="-fx-background-color: #202020; -fx-background-radius: 10px; -fx-border-color: #ffffff; -fx-border-width: 0.05px; -fx-border-radius: 10px;" text="Comprar ingresso" textFill="WHITE">
                <font>
                   <Font name="Comic Sans MS Bold Italic" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
     </AnchorPane>
