--- a/CineMais/src/filmesEmCartaz.fxml
+++ b/CineMais/src/filmesEmCartaz.fxml
@@ -130,6 +130,21 @@
                   <Label layoutX="368.0" layoutY="136.0" text="Sala 08  3D 10/07" textFill="WHITE" />
                   <Label layoutX="233.0" layoutY="197.0" text="Sala 04  2D 11/07" textFill="WHITE" />
                   <Label layoutX="368.0" layoutY="197.0" text="Sala 03  3D 12/07" textFill="WHITE" />
+                  <Button fx:id="btnDetalhes01" layoutX="24.0" layoutY="112.0" mnemonicParsing="false" onAction="#irDetalhes01" style="-fx-background-color: transparent;" text="+Destalhes" textFill="WHITE" underline="true">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="btnDetalhes02" layoutX="24.0" layoutY="172.0" mnemonicParsing="false" onAction="#irDetalhes02" style="-fx-background-color: transparent;" text="+Destalhes" textFill="WHITE" underline="true">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="btnDetalhes03" layoutX="24.0" layoutY="235.0" mnemonicParsing="false" onAction="#irDetalhes03" style="-fx-background-color: transparent;" text="+Destalhes" textFill="WHITE" underline="true">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </Pane>
          </children>
