--- a/CineMais/src/filmesEmCartaz.fxml
+++ b/CineMais/src/filmesEmCartaz.fxml
@@ -62,17 +62,17 @@
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="24.0" layoutY="89.0" prefHeight="23.0" prefWidth="179.0" text="Vingadores: Ultimato" textFill="WHITE">
+                  <Label  fx:id="filme1" layoutX="24.0" layoutY="89.0" prefHeight="23.0" prefWidth="179.0" text="Vingadores: Ultimato" textFill="WHITE">
                      <font>
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="24.0" layoutY="153.0" prefHeight="23.0" prefWidth="179.0" text="Piratas do Caribe" textFill="WHITE">
+                  <Label fx:id="filme2" layoutX="24.0" layoutY="153.0" prefHeight="23.0" prefWidth="179.0" text="Piratas do Caribe" textFill="WHITE">
                      <font>
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="24.0" layoutY="217.0" prefHeight="23.0" prefWidth="179.0" text="Velozes e Furiosos" textFill="WHITE">
+                  <Label fx:id="filme3" layoutX="24.0" layoutY="217.0" prefHeight="23.0" prefWidth="179.0" text="Velozes e Furiosos" textFill="WHITE">
                      <font>
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
@@ -125,12 +125,12 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label layoutX="233.0" layoutY="69.0" text="Sala 02  3D 08/07" textFill="WHITE" />
-                  <Label layoutX="368.0" layoutY="69.0" text="Sala 05  4D 09/07" textFill="WHITE" />
-                  <Label layoutX="233.0" layoutY="136.0" text="Sala 07  2D 08/07" textFill="WHITE" />
-                  <Label layoutX="368.0" layoutY="136.0" text="Sala 08  3D 10/07" textFill="WHITE" />
-                  <Label layoutX="233.0" layoutY="197.0" text="Sala 04  2D 11/07" textFill="WHITE" />
-                  <Label layoutX="368.0" layoutY="197.0" text="Sala 03  3D 12/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo01" layoutX="233.0" layoutY="69.0" text="Sala 02  3D 08/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo02" layoutX="368.0" layoutY="69.0" text="Sala 05  4D 09/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo03" layoutX="233.0" layoutY="136.0" text="Sala 07  2D 08/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo04" layoutX="368.0" layoutY="136.0" text="Sala 08  3D 10/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo05" layoutX="233.0" layoutY="197.0" text="Sala 04  2D 11/07" textFill="WHITE" />
+                  <Label fx:id="infoSalaTipo06" layoutX="368.0" layoutY="197.0" text="Sala 03  3D 12/07" textFill="WHITE" />
                   <TextField fx:id="inputDia" layoutX="280.0" layoutY="2.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #303030;" text="DD" />
                   <Label layoutX="323.0" layoutY="1.0" text="/" textFill="WHITE">
                      <font>
