--- a/CineMais/src/comprarIngresso.fxml
+++ b/CineMais/src/comprarIngresso.fxml
@@ -75,27 +75,27 @@
             </Label>
             <VBox layoutX="165.0" layoutY="204.0" prefHeight="129.0" prefWidth="82.0">
                <children>
-                  <Label text="Filme:" textFill="#999999">
+                  <Label fx:id="filme" text="Filme:" textFill="#999999">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="29.0" prefWidth="68.0" text="Sessão:" textFill="#999999">
+                  <Label fx:id="filme" prefHeight="29.0" prefWidth="68.0" text="Sessão:" textFill="#999999">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="31.0" prefWidth="78.0" text="Duração:" textFill="#999999">
+                  <Label fx:id="filme" prefHeight="31.0" prefWidth="78.0" text="Duração:" textFill="#999999">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="33.0" prefWidth="45.0" text="Tipo:" textFill="#999999">
+                  <Label fx:id="filme" prefHeight="33.0" prefWidth="45.0" text="Tipo:" textFill="#999999">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="32.0" prefWidth="55.0" text="Preço:" textFill="#999999">
+                  <Label fx:id="filme" prefHeight="32.0" prefWidth="55.0" text="Preço:" textFill="#999999">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
