--- a/CineMais/bin/filmesEmCartaz.fxml
+++ b/CineMais/bin/filmesEmCartaz.fxml
@@ -35,6 +35,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -56,7 +57,7 @@
             </Label>
             <Pane layoutX="88.0" layoutY="98.0" prefHeight="271.0" prefWidth="498.0" style="-fx-background-color: #202020; -fx-background-radius: 10px;">
                <children>
-                  <Label fx:id="titleShopping" layoutX="170.0" layoutY="2.0" text="Shopping Salvador" textFill="WHITE">
+                  <Label fx:id="titleShopping" layoutX="74.0" layoutY="2.0" text="Shopping Salvador" textFill="WHITE">
                      <font>
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
@@ -76,11 +77,7 @@
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
                   </Label>
-<<<<<<< Updated upstream
-                  <Button fx:id="btn01Filme1" layoutX="232.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso01" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="13:50" textFill="WHITE">
-=======
                   <Button fx:id="btn01" layoutX="232.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso01" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="13:50" textFill="WHITE">
->>>>>>> Stashed changes
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -88,7 +85,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="btn03Filme2" layoutX="232.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso03" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="14:00" textFill="WHITE">
+                  <Button fx:id="btn03" layoutX="232.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso03" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="14:00" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -96,7 +93,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="btn05Filme3" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso05" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="16:00" textFill="WHITE">
+                  <Button fx:id="btn05" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso05" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="16:00" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -104,7 +101,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="btn06Filme3" layoutX="367.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso06" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="20:40" textFill="WHITE">
+                  <Button fx:id="btn06" layoutX="367.0" layoutY="214.0" mnemonicParsing="false" onAction="#irIngresso06" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="20:40" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -112,7 +109,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="btn04Filme2" layoutX="367.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso04" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="19:50" textFill="WHITE">
+                  <Button fx:id="btn04" layoutX="367.0" layoutY="150.0" mnemonicParsing="false" onAction="#irIngresso04" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="19:50" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -120,7 +117,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="btn02Filme1" layoutX="367.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso02" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="17:30" textFill="WHITE">
+                  <Button fx:id="btn02" layoutX="367.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso02" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="17:30" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -134,21 +131,18 @@
                   <Label fx:id="infoSalaTipo04" layoutX="368.0" layoutY="136.0" text="Sala 08  3D 10/07" textFill="WHITE" />
                   <Label fx:id="infoSalaTipo05" layoutX="233.0" layoutY="197.0" text="Sala 04  2D 11/07" textFill="WHITE" />
                   <Label fx:id="infoSalaTipo06" layoutX="368.0" layoutY="197.0" text="Sala 03  3D 12/07" textFill="WHITE" />
-<<<<<<< Updated upstream
-=======
-                  <TextField fx:id="inputDia" layoutX="280.0" layoutY="2.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #fffffff;" text="08" />
+                  <TextField fx:id="inputDia" layoutX="280.0" layoutY="2.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #303030;" text="DD" />
                   <Label layoutX="323.0" layoutY="1.0" text="/" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="inputMes" layoutX="337.0" layoutY="3.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #ffffff;" text="07" />
+                  <TextField fx:id="inputMes" layoutX="337.0" layoutY="3.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #303030;" text="MM" />
                   <Button fx:id="btnBuscarData" layoutX="381.0" layoutY="3.0" mnemonicParsing="false" onAction="#procurarPorData" prefHeight="25.0" prefWidth="93.0" style="-fx-background-color: #202020;" text="Bucar Data" textFill="#ff4e4e" underline="true">
                      <font>
                         <Font name="Comic Sans MS" size="14.0" />
                      </font>
                   </Button>
->>>>>>> Stashed changes
                </children>
             </Pane>
             <Button fx:id="btnPerfil" layoutX="578.0" layoutY="14.0" mnemonicParsing="false" onAction="#menuPerfil" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: #181818;" text="#" textFill="#ff1313">
