--- a/CineMais/bin/finalizacaoCompra.fxml
+++ b/CineMais/bin/finalizacaoCompra.fxml
@@ -44,7 +44,7 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #181818;" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#voltarListaShoṕpings" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
+            <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#voltarListaShoppings" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
                <font>
                   <Font size="14.0" />
                </font>
