--- a/CineMais/bin/perfil.fxml
+++ b/CineMais/bin/perfil.fxml
@@ -39,35 +39,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="perfilController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #181818;" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="240.0" layoutY="92.0" opacity="0.9" text="CineMais" textFill="#da0000">
+            <Button fx:id="btnBack" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#voltarHome" style="-fx-background-color: #181818;" text="&lt;&lt;" textFill="RED">
                <font>
-                  <Font name="Comic Sans MS Bold" size="38.0" />
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label layoutX="273.0" layoutY="45.0" prefHeight="42.0" prefWidth="96.0" text="Perfil" textFill="RED">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="30.0" />
                </font>
             </Label>
-            <Button fx:id="btnFilmesCartaz" layoutX="105.0" layoutY="245.0" mnemonicParsing="false" onAction="#ViewFilmesEmCartaz" prefHeight="46.0" prefWidth="177.0" style="-fx-background-color: #202020; -fx-background-radius: 10px; -fx-border-color: #ffffff; -fx-border-width: 0.05px; -fx-border-radius: 10px;" text="Filmes em cartaz" textFill="WHITE">
+            <Button fx:id="btnConta" layoutX="93.0" layoutY="186.0" mnemonicParsing="false" onAction="#abrirConta" prefHeight="53.0" prefWidth="189.0" style="-fx-background-color: #202020; -fx-border-color: #666666; -fx-border-radius: 5px;" text="Conta" textFill="WHITE">
                <font>
-                  <Font name="Comic Sans MS Bold Italic" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnComprarIngresso" layoutX="353.0" layoutY="245.0" mnemonicParsing="false" onAction="#GoToLogin" prefHeight="46.0" prefWidth="177.0" style="-fx-background-color: #202020; -fx-background-radius: 10px; -fx-border-color: #ffffff; -fx-border-width: 0.05px; -fx-border-radius: 10px;" text="Comprar ingresso" textFill="WHITE">
+            <Button fx:id="btnIngressos" layoutX="358.0" layoutY="186.0" mnemonicParsing="false" onAction="#abrirIngressos" prefHeight="53.0" prefWidth="189.0" style="-fx-background-color: #202020; -fx-border-color: #666666; -fx-border-radius: 5px;" text="Ingressos" textFill="WHITE">
                <font>
-                  <Font name="Comic Sans MS Bold Italic" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnPerfil" layoutX="579.0" layoutY="14.0" mnemonicParsing="false" onAction="#menuPerfil" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: #181818;" text="#" textFill="#ff1313">
+            <Button fx:id="btnExcluirConta" layoutX="226.0" layoutY="327.0" mnemonicParsing="false" onAction="#abrirExcluirConta" prefHeight="42.0" prefWidth="189.0" style="-fx-background-color: #202020; -fx-border-color: #710d0d; -fx-border-radius: 5px;" text="Excluir Conta" textFill="RED">
                <font>
-                  <Font name="Constantia Bold" size="25.0" />
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
     </AnchorPane>
